[package]
name = "srcomapi"
version = "0.0.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[dependencies]
bigdecimal = "*"
itertools = "*"
lazy_static = "1"
regex = "1"
reqwest = "*"
serde = "1"
serde_derive = "1"
wrapped_enum = "*"

[dependencies.chrono]
version = "*"
features = ["serde"]
