[package]
name = "srcomapi"
version = "0.0.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[dependencies]
bigdecimal = "*"
itertools = "*"
lazy_static = "1"
rand = "*"
regex = "1"
reqwest = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
url_serde = "*"
wrapped_enum = "*"

[dependencies.chrono]
version = "*"
features = ["serde"]

[patch.crates-io]
native-tls = { git = "https://github.com/fenhl/rust-native-tls", branch = "fix-deps" } # until https://github.com/sfackler/rust-native-tls/issues/119 is fixed
