[package]
name = "srcomapi"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[dependencies]
bigdecimal = "0.1"
derive_more = "0.99"
itertools = "0.8"
lazy_static = "1"
rand = "0.7"
reqwest = "0.9" #TODO upgrade to 0.10 and rework to use async
serde_json = "1"
url_serde = "0.2"

[dependencies.chrono]
version = "0.4.2"
features = ["serde"]

[dependencies.regex]
version = "1.3"
default-features = false # no Unicode support needed
features = ["perf"]

[dependencies.serde]
version = "1"
features = ["derive"]
